--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,20 +1,27 @@
-<h1>Blog ({{posts|length}} posts)  </h1>
-<ul>
-{% for post in posts%}
-	
-	<article>
-		<h2><a href='/blog/posts/{{post.id}}'> {{post.id}} - {{post.title|upper}} </a></h2>
-		<p> {{post.body|truncatewords:3}} </p>
-		<p><a href='/blog/posts/{{post.id}}'>lire la suite </a></p> 
-	</article>
+{% extends 'layouts/base.html'%}
 
-	{% if not forloop.last %}
-		<hr>
-	{% endif %}
+{% block title %} Blog | DTP {% endblock %}
 
-{% empty %}
-	<p> Sory, no posts available.</p>
+{% block content %}
+
+	<h1>Blog ({{posts|length}} posts)  </h1>
+	<ul>
+	{% for post in posts%}
+		
+		<article>
+			<h2><a href="{% url 'blog:show' post.id%}"> #{{post.id}} - {{post.title|upper}} </a></h2>
+			<p> {{post.body|truncatewords:3}} </p>
+			<p><a href="{% url 'blog:show' post.id%}"'>lire la suite </a></p> 
+		</article>
+
+		{% if not forloop.last %}
+			<hr>
+		{% endif %}
+
+	{% empty %}
+		<p> Sory, no posts available.</p>
 
 {% endfor %}
 
 </ul>
+{% endblock %}
