--- a/blog/templates/blog/show.html
+++ b/blog/templates/blog/show.html
@@ -1,4 +1,14 @@
-<article>
-	<h1> # {{post.id}} - {{post.title}}</h1>
-	<p>{{post.body}}</p>
-</article>
+{% extends 'layouts/base.html' %}
+{% block title %} Blog | {{post.title}} {% endblock %}
+	
+{% block content %}
+
+	<article>
+		<h1> # {{post.id}} - {{post.title}}</h1>
+		<p>{{post.body}}</p>
+	</article>
+
+	<hr>
+	<p><a href="{% url 'blog:index' %}"> All posts </a>	</p>
+
+{% endblock %}
