--- a/templates/home.html
+++ b/templates/home.html
@@ -1,1 +1,6 @@
-<h1> hello DTP </h1>
+{% extends 'layouts/base.html' %}
+
+	{% block content %}
+	<h1> hello DTP </h1>
+	<p><a href="{% url 'blog:index' %}"> Visiter notre page Blog </a></p>
+{% endblock%}
