--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -1,1 +1,8 @@
-<h1> About DTP </h1>
+{% extends 'layouts/base.html' %}
+{% block title %} About {% endblock %}
+	
+{% block content %}
+
+	<h1> About DTP </h1>
+
+{% endblock %}
