--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -1,1 +1,8 @@
-<h1> Contact DTP </h1>
+{% extends 'layouts/base.html' %}
+{% block title %} Contact {% endblock %}
+	
+{% block content %}
+
+	<h1> Contact DTP </h1>
+
+{% endblock %}
