--- a/templates/layouts/_nav.html
+++ b/templates/layouts/_nav.html
@@ -1,9 +1,12 @@
-<ul>
-	<li> <a href="{% url 'home'%}">Home</a></li>
-	<li> <a href="{% url 'blog:index'%}">Blog</a></li>
-	<li> <a href="{% url 'about'%}">About</a></li>
-	<li> <a href="{% url 'contact'%}">Conract</a></li>
-</ul>
+<nav>
+	<ul>
+		<li> <a href="{% url 'home'%}">Home</a></li>
+		<li> <a href="{% url 'blog:index'%}">Blog</a></li>
+		<li> <a href="{% url 'about'%}">About</a></li>
+		<li> <a href="{% url 'contact'%}">Conract</a></li>
+	</ul>
+</nav>
+
 
 
 		 
