--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -1,13 +1,20 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<title>{% block title %}Dtp{% endblock %}</title>
+	<meta name="viewport" content="width=device-width; initial-scale=1.0" >
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
 </head>
 <body>
 	{% include 'layouts/_nav.html' %}
 	
 	{% block content %}{% endblock %}
+
+	{% include 'layouts/_footer.html' %}
+
 	
 </body>
 </html>
