--- a/blog/templates/blog/show.html
+++ b/blog/templates/blog/show.html
@@ -1,11 +1,11 @@
-{% extends 'layouts/base.html' %}
+{% extends 'blog/base.html' %}
 {% block title %} Blog | {{post.title}} {% endblock %}
 	
-{% block content %}
+{% block body %}
 
 	<article>
-		<h1> # {{post.id}} - {{post.title}}</h1>
-		<p>{{post.body}}</p>
+		<h1 class="title"> # {{post.id}} - {{post.title}}</h1>
+		<p class="content">{{post.body}}</p>
 	</article>
 
 	<hr>
