--- a/templates/layouts/_footer.html
+++ b/templates/layouts/_footer.html
@@ -1,4 +1,4 @@
-<footer>
+<footer class="footer text-center">
 	<p>&copy;  Copyright {% now 'Y' %}   DTP &middot; All rights reserved!</p>
 
 </footer>
