--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -4,17 +4,25 @@
 <head>
 	<meta charset="UTF-8">
 	<title>{% block title %}Dtp{% endblock %}</title>
+
 	<meta name="viewport" content="width=device-width; initial-scale=1.0" >
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+
 	<link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
+
+	{% block stylesheets %} {% endblock %}
+
 </head>
 <body>
 	{% include 'layouts/_nav.html' %}
 	
-	{% block content %}{% endblock %}
+	<div class="wrapper">
+		{% block content %}{% endblock %}
 
-	{% include 'layouts/_footer.html' %}
+		{% include 'layouts/_footer.html' %}
+ 	</div>
 
-	
+	{% block javascripts %} {% endblock %}
+
 </body>
 </html>
